--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 
 .container {
     width: 90%;
-    max-width: 1200px;
+    /* max-width: 1200px; */
     margin: 0 auto;
     overflow: hidden;
     padding: var(--padding-container);
@@ -354,6 +354,7 @@ body {
 .projects {
    
     background-color: #fff;
+
 }
 .projects__subtitle {
     color: #000;
@@ -361,6 +362,13 @@ body {
 
 .projects__subtitle + .barra {
     width: 240px;
+}
+
+
+.container.projects__container{
+    width: 95%;
+    margin: 0 auto;
+    
 }
 
 .main__projects {
@@ -377,7 +385,7 @@ body {
 
 .card {
     position: relative;
-    width: 380px;
+    width: 400px;
     height: 350px;
     /* overflow: hidden; */
     /* border:1px solid #dde1e6; */
@@ -394,7 +402,7 @@ body {
 
 .face {
     position: absolute;
-    width: 360px;
+    width: 380px;
     height: 330px;
     backface-visibility: hidden;
     /* border-radius: 10px; */
@@ -415,7 +423,18 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+
 }
+
+
+.powerbi__img{
+    /* object-fit: contain; */
+    /* width: 500px; */
+    /* height: 300px; */
+    object-position: 68% center;
+
+}
+
 
 .front__title {
     position: absolute;
@@ -592,11 +611,12 @@ body {
 
 .form__title {
     color: #fff;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 1.5rem;
     line-height: 1;
     margin-bottom: 0.7rem;
     text-align: left;
+
 }
 
 /* .form__title--color{
@@ -605,8 +625,13 @@ body {
 
 .info__paragraph {
     margin: 1.5rem 0 2rem 0;
-    line-height: 1.5;
+    line-height: 1.7;
 }
+
+.info__paragraph span{
+    font-weight: 400;
+}
+
 
 .information {
     display: flex;
