Terminando el proyecto

--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap");
 
+body{
+    background-color: #f3f3f3;
+}
+
 
 .hero{
     width: auto;
@@ -48,9 +52,12 @@
     width: 565px;
     height: 330px;
     overflow: hidden;
-    box-shadow: 0 0 0 10px #fff,
-                0 15px 50px;
+    box-shadow: 0 0 0  10px #fff,
+                0 15px 40px;
     position: relative;
+    margin: 0 auto;
+
+
 }
 
 .slider{
@@ -138,12 +145,17 @@
 .f__menu{
     display: flex;
     justify-content: center;
-    column-gap: 1rem;
-    row-gap: 40px;
+    /* column-gap: 1rem;
+    row-gap: 40px; */
     list-style-type: none;
     flex-wrap: wrap;
     width: 100%;
     height: 100%;
+}
+
+.link__footer{
+    margin-right: 25px;
+ 
 }
 
 .link__footer a{
@@ -151,6 +163,7 @@
     padding: .65rem 1.5rem;
     color: #fff;
     border: .1rem solid rgba(255,255,255,.3);
+    /* margin-right: 25px; */
     
 }
 
@@ -167,3 +180,84 @@
     color: #ffc632;
     
 }
+
+@media (max-width: 800px) {
+
+    .container__slider{
+        margin-top: 20px;
+    }
+
+    .project__content{
+        padding-right: 0;
+    }
+}
+
+
+@media (max-width: 650px) {
+
+    .container{
+        width: 100%;
+    }
+
+    .project__content{
+        padding: 0 20px 0;
+    }
+
+    .container__slider{
+        width: 465px;
+        height: 270px;
+        /* object-fit: none; */
+    }
+
+    .link__footer{
+        margin-bottom: 50px;
+    }
+}
+
+@media (max-width: 520px) {
+    
+    
+    .container__slider{
+        background-color: red;
+        box-shadow: none;
+        margin-left: 20px;
+       
+        
+    }   
+
+  
+
+
+    .scroll{
+        /* padding: 10px; */
+        width: 450px;
+        overflow-x: scroll;
+        padding-bottom: 5px;
+    }
+
+}
+
+
+@media (max-width: 460px) {
+    .scroll{
+        /* padding: 10px; */
+        width: 350px;
+        overflow-x: scroll;
+        padding-bottom: 5px;
+        margin-left: 40px;
+    }
+    
+    .card__projects{
+        margin-top: 20px;
+    }
+
+
+    .subtitle__projects{
+        font-size: 1.8rem;
+    
+    }
+    .raya{
+        width: 210px;
+    }
+}
+
